--- a/plantilla-backend-ts/package.json
+++ b/plantilla-backend-ts/package.json
@@ -84,7 +84,7 @@
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.2.0",
+    "mysql2": "3.2.0",
     "n2words": "^1.13.0",
     "nodemailer": "^6.9.1",
     "pdfmake": "^0.2.7",
